--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "json2csv": "^6.0.0-alpha.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
